@@ -92,7 +92,9 @@ int ipod_set_blank_mode(int blank);
 
 void ipod_beep(void);
 
-#define BATTERY_MAX (512)
+#define BATTERY_LEVEL_LOW 50 
+#define BATTERY_LEVEL_FULL 512
+
 int ipod_get_battery_level(void);
 int ipod_is_charging(void);
 void ipod_turn_off(void);
@@ -100,6 +102,9 @@ void ipod_turn_off(void);
 
 int usb_is_connected(void);
 void usb_check_goto_diskmode(void);
+
+int fw_is_connected(void);
+void fw_check_goto_diskmode(void);
 
 long ipod_get_hw_version(void);
 
